# nutri-analytics

./: .env.example  .gitignore  LICENSE  README.md  app.py  database.py  estadisticas.py  exporter.py  filtros.py  mcp_server.py  planificacion.py  pyproject.toml
db/: 001_esquema_inicial.sql
docs/: decisiones.md  plan_app_personal.md  roadmap.md
paginas/: comun.py  dashboard.py  lista_compra.py  metricas.py  planificador.py  recetario.py  stubs.py
tests/: test_comun.py  test_database.py  test_database_integration.py  test_estadisticas.py  test_exporter.py  test_filtros.py  test_mcp_server.py  test_planificacion.py
