[project]
name = "nutri-analytics"
version = "0.1.0"
description = "App personal de planificación de menús, recetas y seguimiento de salud/deporte con exportación de contexto para LLMs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "supabase>=2.31.0",
]
