[project]
name = "nutri-analytics"
version = "0.1.0"
description = "App personal de planificación de menús, recetas y seguimiento de salud/deporte con exportación de contexto para LLMs"
readme = "README.md"
# >=3.12 para compatibilidad con Streamlit Community Cloud; en local se usa
# 3.14 (fijado en .python-version).
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "supabase>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests que golpean la base de datos real de Supabase (requieren .env)"]
addopts = "-m 'not integration'"
